#ifndef HCONFIG_H_
#define HCONFIG_H_

#define FAST_BUILD
/* #undef SCIP_DEV */
/* #undef HiGHSDEV */
/* #undef OSI_FOUND */
#define ZLIB_FOUND
#define CMAKE_BUILD_TYPE "Debug"
/* #undef HiGHSRELEASE */
/* #undef HIGHSINT64 */
/* #undef HIGHS_HAVE_MM_PAUSE */
#define HIGHS_HAVE_BUILTIN_CLZ
/* #undef HIGHS_HAVE_BITSCAN_REVERSE */

#define HIGHS_GITHASH "0a90fab4f"
#define HIGHS_COMPILATION_DATE "2022-10-06"
#define HIGHS_VERSION_MAJOR 1
#define HIGHS_VERSION_MINOR 2
#define HIGHS_VERSION_PATCH 2
#define HIGHS_DIR "/Users/igalabo2/code/HiGHS"

#endif /* HCONFIG_H_ */
