"""highs module
"""
module(
    name = "highs",
    version = "1.11.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.1",
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.2",
)

bazel_dep(
    name = "zlib",
    version = "1.3.1.bcr.5",
)

bazel_dep(
    name = "rules_cuda",
    version = "0.2.5",
)

local_cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
local_cuda.local_toolchain(
    toolkit_path = "",
)
use_repo(local_cuda, "local_cuda")
