"""highs module
"""
module(
    name = "highs",
    version = "1.12.0",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.14",
)

bazel_dep(
    name = "zlib",
    version = "1.3.1.bcr.5",
)

bazel_dep(
    name = "rules_cuda",
    version = "0.2.5",
)

# Override the module with the latest rules_cuda
git_override(
    module_name = "rules_cuda",
    remote = "https://github.com/bazel-contrib/rules_cuda.git",
    commit = "3692ecb",
)

# Load the extension
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "",
)

# Use 'cuda' as the repository name
# use_repo(cuda, "cuda")

# Alias local_cuda
use_repo(cuda, local_cuda = "cuda")
