"""highs module
"""
module(
    name = "highs",
    version = "1.13.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.17",
)

bazel_dep(
    name = "zlib",
    version = "1.3.2",
)

bazel_dep(
    name = "rules_cuda",
    version = "0.3.0",
)

# Load the extension
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
)

# Use 'cuda' as the repository name
# use_repo(cuda, "cuda")

# Alias local_cuda
use_repo(cuda, local_cuda = "cuda")
